[package]
name = "todo_queue"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
anyhow = "1.0"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
crossterm = "0.28"
ratatui = "0.28"
